--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Our Achievements - EduTech Pro</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        
+
         :root {
             --primary: #6366f1;
             --secondary: #3b82f6;
@@ -274,6 +274,8 @@
             text-decoration: none;
             font-weight: 600;
             transition: transform 0.3s;
+            border: none;            /* for <button> appearance */
+            cursor: pointer;
         }
 
         .btn-white:hover { transform: translateY(-3px); }
@@ -292,6 +294,55 @@
             .hero h1 { font-size: 2rem; }
             .results-grid { grid-template-columns: 1fr; }
             .score-grid { grid-template-columns: 1fr; }
+        }
+
+        /* ===== Modal Overlay ===== */
+        .modal-overlay {
+            display: none;             /* hidden by default */
+            position: fixed;
+            top: 0; left: 0;
+            width: 100vw; height: 100vh;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(2px);
+            justify-content: center;
+            align-items: center;
+            z-index: 2000;             /* above everything else */
+        }
+
+        .modal-content {
+            background: var(--white);
+            padding: 30px 40px;
+            border-radius: 12px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            max-width: 90%;
+            width: 360px;
+            text-align: center;
+            position: relative;
+        }
+
+        .modal-content h2 {
+            font-size: 1.8rem;
+            color: var(--dark);
+            margin-bottom: 15px;
+        }
+
+        .modal-content p {
+            font-size: 1rem;
+            color: var(--gray-600);
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            font-size: 1.4rem;
+            color: var(--gray-600);
+            cursor: pointer;
+            transition: color 0.2s;
+        }
+
+        .modal-close:hover {
+            color: var(--dark);
         }
     </style>
 </head>
@@ -481,6 +532,46 @@
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2025 EduTech Pro. All rights reserved.</p>
+        <!-- Bottom Contact Button -->
+        <button id="contact-bottom-btn" class="btn-white" style="margin-top: 20px;">
+            Contact Us 📞
+        </button>
     </footer>
+
+    <!-- Modal (hidden by default) -->
+    <div id="contact-modal" class="modal-overlay">
+        <div class="modal-content">
+            <span class="modal-close">&times;</span>
+            <h2>Welcome—We will be happy to help you!</h2>
+            <p style="margin: 20px 0;">
+                <strong>Mobile:</strong> +91-98765-43210<br>
+                <strong>Email:</strong> support@edutechpro.com
+            </p>
+        </div>
+    </div>
+
+    <script>
+        // Grab references
+        const bottomBtn = document.getElementById('contact-bottom-btn');
+        const modal    = document.getElementById('contact-modal');
+        const closeBtn = modal.querySelector('.modal-close');
+
+        // Show modal
+        bottomBtn.addEventListener('click', () => {
+            modal.style.display = 'flex';
+        });
+
+        // Close when "×" is clicked
+        closeBtn.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        // Close when clicking outside the modal-content
+        modal.addEventListener('click', (e) => {
+            if (e.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
