--- a/index.html
+++ b/index.html
@@ -352,9 +352,20 @@
     <header class="header">
         <nav class="nav">
             <a href="#" class="logo">
-                <div class="logo-icon">🏆</div>
-                EduTech Pro
-            </a>
+  <div class="logo-text">
+    <div class="logo-title">SYMBIOTIC INSTITUTE</div>
+    <div class="logo-sub">
+      Overseas Education Division and
+      <span class="live-text">
+        <span class="live-icon">🔴</span>LIVE Online Coaching Division
+      </span>
+    </div>
+    <div class="logo-parent">
+      (a unit of SYMBIOTIC EDUSOLUTIONS PRIVATE LIMITED)
+    </div>
+  </div>
+</a>
+
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Results</a></li>
