--- a/index.html
+++ b/index.html
@@ -352,19 +352,10 @@
     <header class="header">
         <nav class="nav">
             <a href="#" class="logo">
-  <div class="logo-text">
-    <div class="logo-title">SYMBIOTIC INSTITUTE</div>
-    <div class="logo-sub">
-      Overseas Education Division and
-      <span class="live-text">
-        <span class="live-icon">🔴</span>LIVE Online Coaching Division
-      </span>
-    </div>
-    <div class="logo-parent">
-      (a unit of SYMBIOTIC EDUSOLUTIONS PRIVATE LIMITED)
-    </div>
-  </div>
+  <div class="logo-icon">🏆</div>
+  EduTech Pro
 </a>
+
 
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
